# ronda_reade

./: .gitignore  GEMINI.md  README.md  app.py  pyproject.toml
docs/: design.md  requirements.md  tasks.md
src/ronda_reade/: __init__.py  audio_composition.py  core.py  exceptions.py  main.py  narrate.py  narrator.py  oration.py  text_chunker.py  ui.py  user_text.py
tests/: test_audio_composition.py  test_narrator.py  test_oration.py  test_text_chunker.py  test_user_text.py
voices/SLR83/: sof_07508_00062407046.txt
